--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
       <div id ="welcomeScreen">
         <div class = "row">
           <div class="col s12">
-            <img id="logo" width="650" src="assets/images/Maas.png">
-            <h3>Music as a Service</h3>
+            <img id="logo" width="40%" src="assets/images/Maas_logo.png">
             <div class="input-field">
-              <input id="search" type="search" required>
-              <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-              <i class="material-icons">close</i>
+              <input placeholder="Artist search" input id="search" type="text" required>
+              <label class="label-icon" for="search"><i class="material-icons"></i></label>
+              
             </div>
           </div>
         </div>
@@ -34,11 +33,10 @@
           <div class="row">
             <div id="header1">
               <div class="col s6">
-                <img id="materialboxed" width="150" height ="80" src="assets/images/Maas.png">
+                <img id="materialboxed" width="20%" src="assets/images/Maas_logo.png">
                 <div class="input-field">
-                  <input id="search" type="search" required>
-                  <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                  <i class="material-icons">close</i>
+                  <input placeholder="Artist search" input id="search" input type="text" required>
+                  <label class="label-icon" for="search"><i class="material-icons"></i></label>
                 </div>
               </div>
             </div>
@@ -75,43 +73,43 @@
           <div class="row">
             
             <div class="col s12 m5">
+             <h4>spotify</h4>
               <div class="card-panel" id="spotify">
-                <h4>spotify</h4>
-                <span class="white-text">
+                <span class="black-text">
                 </span>
               </div>
             </div>
             <div class="col s12 m5">
+              <h4>youtube</h4>
               <div class="card-panel" id="youtube">
-                <h4>youtube</h4>
                 <span class="black-text">
                 </span>
               </div>
             </div>
             <div class="col s12 m5">
+              <h4>Wikipedia</h4>
               <div class="card-panel" id="wikipedia">
-                <h4>Wikipedia</h4>
                 <span class="black-text">
                 </span>
               </div>
             </div>
             <div class="col s12 m5">
+              <h4>News</h4>
               <div class="card-panel" id="news">
-                <h4>News</h4>
                 <span class="black-text">
                 </span>
               </div>
             </div>
             <div class="col s12 m5">
+              <h4>Twitter</h4>
               <div class="card-panel" id="twitter">
-                <h4>Twitter</h4>
                 <span class="black-text">
                 </span>
               </div>
             </div>
             <div class="col s12 m5">
+              <h4>Events</h4>
               <div class="card-panel" id="events">
-                <h4>Events</h4>
                 <span class="black-text">
                 </span>
               </div>
