--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img id="logo" width="30%" src="assets/images/Maas_logo2.png">
             <!--search bar-->
             <div class="input-field">
-              <input placeholder="Artist search" input id="search" type="text" required>
+              <input placeholder="Artist search" id="search" type="text" required>
               <label class="label-icon" for="search"><i class="material-icons"></i></label>
               
             </div>
@@ -41,7 +41,7 @@
               <div class="col s6">
                 <img id="materialboxed" width="20%" src="assets/images/Maas_logo2.png">
                 <div class="input-field">
-                  <input placeholder="Artist search" input id="search" input type="text" required>
+                  <input placeholder="Artist search" id="search" type="text" required>
                   <label class="label-icon" for="search"><i class="material-icons"></i></label>
                 </div>
               </div>
@@ -108,7 +108,7 @@
               </div>
             </div>
             <div class="col s12 m5">
-              <h4>Events</h4>
+              <h4>Get your Grove on</h4>
               <div class="card-panel" id="events">
                 <span class="black-text ">
                 </span>
@@ -126,6 +126,26 @@
         </div>
       </div>
     </div>
+     <footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">Footer Content</h5>
+                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+              </div>
+              <div class="col l4 offset-l2 s">
+                <h5 class="white-text">Links</h5>
+                
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+            © 2017 Copyright Music as a Service
+            <a class="grey-text text-darken-8 right"></a>
+            </div>
+          </div>
+        </footer>
   <script type="text/javascript" src="./assets/javascript/app.js"></script>
   </body>
 </html>
