--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <div class="col s6">
                 <img id="materialboxed" width="20%" src="assets/images/Maas_logo2.png">
                 <div class="input-field">
-                  <input placeholder="Artist search" id="search" type="text" required>
+                  <input placeholder="Artist search" id="search1" type="text" required>
                   <label class="label-icon" for="search"><i class="material-icons"></i></label>
                 </div>
               </div>
