--- a/index.html
+++ b/index.html
@@ -134,11 +134,10 @@
         </div>
       </div>
     </div>
-     <footer class="page-footer">
+     <footer class="page-footer" id="footer">
             <div class="container">
             © 2017 Copyright Music as a Service
-            <a class="blue-text text-darken-2 right"></a>
-            </div>
+            
         
         </footer>
   <script type="text/javascript" src="./assets/javascript/app.js"></script>
