--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div id = "results">
         <!--header for the search and buttons-->
         
-          <div class="row">
+          <div class="row" id="header">
             <!--div for just the search-->
             <div class="col s2" id="header1">
               <img id="materialboxed" width="80%" src="assets/images/Maas_logo2.png">
