--- a/index.html
+++ b/index.html
@@ -59,12 +59,8 @@
         <div id="artist-photos">
           <div class="row">
             <h3 id="artist-name">Artist Name</h3>
-            <div class="carousel col s12" id="caro">
-              <!-- <a class="carousel-item" href="image1"><img src=""></a>
-              <a class="carousel-item" href="image2"><img src=""></a>
-              <a class="carousel-item" href="image3"><img src=""></a>
-              <a class="carousel-item" href="image4"><img src=""></a>
-              <a class="carousel-item" href="image5"><img src=""></a> -->
+            <div class="col s12" id="caro">
+              
             </div>
           </div>
         </div>
